# accent_estimator

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  setup.py  train.py  validate.ipynb
.github/workflows/: docker.yaml  test.yml
accent_estimator/: config.py  dataset.py  evaluator.py  generator.py  model.py
accent_estimator/data/: data.py  phoneme.py
accent_estimator/network/: index_positional_encoder.py  predictor.py
accent_estimator/network/conformer/: convolution.py  encoder.py  encoder_layer.py
accent_estimator/network/transformer/: attention.py  embedding.py  multi_layer_conv.py  utility.py
accent_estimator/utility/: dataset_utility.py  pytorch_utility.py  train_utility.py
docs/: コーディング規約.md
hiho_pytorch_base/: batch.py  config.py  dataset.py  evaluator.py  generator.py  model.py
hiho_pytorch_base/data/: base.py  data.py  phoneme.py  statistics.py  wave.py
hiho_pytorch_base/network/: cnn.py  predictor.py  ssl_feature_models.py
hiho_pytorch_base/utility/: pathlist_utility.py  upath_utility.py
scripts/: check_dataset.py  export_onnx.py  generate.py  train.py  visualize.py
tests/: conftest.py  test_check_dataset.py  test_config.py  test_export_onnx.py  test_train.py  test_utils.py
tests/input_data/: base_config.yaml  dummy_ssl_model.pt
