[project]
name = "hiho_pytorch_base"
version = "0.1.0"
authors = [
    { name = "Hiroshiba", email = "hihokaruta@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "librosa>=0.11.0",
    "numba>=0.59.0",
    "numpy>=2.2.5",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torch-optimizer>=0.3.0",
    "tqdm>=4.67.1",
    "universal-pathlib>=0.2.6",
]

[dependency-groups]
dev = [
    "fsspec[s3]>=2025.5.1",
    "onnx>=1.18.0",
    "onnxscript>=0.3.2",
    "plotly>=5.24.0",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "ruff>=0.14.9",
    "schedulefree>=1.4.1",
    "streamlit>=1.40.0",
    "tensorboard>=2.19.0",
    "wandb>=0.21.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "D", "D213", "PT", "NPY"]
ignore = [
    "E501", # line-too-long
    "D400", # missing-trailing-period。日本語の「。」に対応していないため。
    "D403", # first-word-uncapitalized。日本語とは無関係であるため。日英混合時の挙動に一貫性が無いため。
]
unfixable = [
    "F401", # unused-import
    "F841", # unused-variable
]

[tool.ruff.lint.per-file-ignores]
"test/**/test_*.py" = ["D103"] # undocumented-public-function。pytest の対象 test_*() が D103 の対象になり、関数名から内容が自明でも docstring を強制されるため。

[tool.ruff.lint.isort]
known-first-party = ["hiho_pytorch_base"]
known-third-party = ["numpy", "torch"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
package = false
exclude-newer = "1 week"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hiho_pytorch_base"]
only-packages = true

[tool.hatch.build.targets.wheel.sources]
"hiho_pytorch_base" = "hiho_pytorch_base"
